--- a/config/retrieval/res50_tri_cls.yaml
+++ b/config/retrieval/res50_tri_cls.yaml
@@ -19,6 +19,9 @@ INPUT:
   DATAPATH: ../../datasets/data/train
   CKPTPATH: ../../out/normalcls/model_best.pyth
 
+BN:
+  ZERO_INIT_FINAL_GAMMA: True
+
 OPTIM:
   BASE_LR: 0.001
   LR_POLICY: cos
